<resources>
    <string name="app_name">Assign4 2017 Sean Heaslip</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="PT_Str">INFO</string>
    <string name="infoPageTitle">INFO</string>
    <string name="listPageTitle">LIST</string>
    <string name="orderPageTitle">ORDER</string>
    <string name="accountPageTitle">ACCOUNT</string>
    <!--Testing use of String array to populate page titles-->
    <string-array name="page_titles">
        <item>tab1</item>
        <item>tab2</item>
        <item>tab3</item>
        <item>tab4</item>
    </string-array>
    <!--Order Fragment Text-->
    <string name="take_photo">Take Photo of Prescription</string>
    <string name="optional_Instructions">Enter other instructions (optional)</string>
    <string name="optional_phonenumber">Enter phone number (optional)</string>
    <string name="send_order">SEND ORDER</string>
    <string name="collection_time_hours">Collection Time (Hours)</string>
    <string name="title_activity_prescription__layout">Prescription_Layout</string>
    <string name="Email_Subject">Prescription Request</string>
    <string name="FromEmail">colette.kirwan@dcu.ie</string>
    <string name="Prescription_Name">Enter Name Here</string>
    <string name="Msg_Subject">Prescription request</string>
    <string name="ToEmail">chemist@dcu.ie</string>
    <string name="Msg_Name">Name:</string>
    <string name="Msg_Part1">Please find my prescription attached. I will collect it in</string>
    <string name="Msg_Part2">time.</string>
    <string name="Msg_Part3">Kind regards,</string>
    <string name="Msg_PhoneNum">Contact Number: </string>
    <string name="opening_times">Opening Times</string>
    <string name="day_time">Mon-Friday 9:30am - 5:30pm</string>
    <!--String Array for Spinner-->
    <string-array name="collectionTimes">
        <item></item>
        <item>1 Hr</item>
        <item>3 Hr</item>
        <item>12 Hr</item>
        <item>48 Hr</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="account_Title">Application Preferences</string>
    <string name="accTxt_CustName">Customer Name</string>
    <string name="accTxt_Password">Password</string>
    <string name="action_send">action_Send</string>
    <string name="action_send2">action_Send2</string>
    <string name="share">Share</string>

    <string name="new_message_notification_title_template">New message: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="new_message_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="mNotificationTicker">Notification Started</string>
    <string name="header_Txt">Welcome to McCabes Pharmacy Santry</string>
</resources>
