<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical"
                android:padding="@dimen/default_Padding"
                tools:context="id_16109759_hdsd.assign42017seanheaslip.MainActivity">

    <EditText
        android:id="@+id/edtTextFrom"
        style="@style/styleEditText"
        android:hint="@string/Prescription_Name"
        android:inputType="textPersonName"/>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtTextFrom"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:background="@color/colorPrimary"
        android:contentDescription=""
        android:onClick="captureImage"

        app:srcCompat="@drawable/cameratrans"
        tools:ignore="ContentDescription"/>

    <TextView
        android:id="@+id/cameraTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageButton"
        android:layout_centerHorizontal="true"
        android:paddingBottom="@dimen/minor_padding"
        android:text="@string/take_photo"
        android:textColor="@color/colorTextWhite"
        android:textSize="@dimen/txtsize"
        android:textStyle="bold"/>


    <EditText
        android:id="@+id/edTxtDescription"
        style="@style/styleEditText"
        android:layout_below="@+id/imageButton"
        android:hint="@string/optional_Instructions"
        android:inputType="textMultiLine"
        android:maxLength="200"
        android:maxLines="3"/>

    <EditText
        android:id="@+id/edtPhoneNum"
        style="@style/styleEditText"
        android:layout_below="@id/edTxtDescription"
        android:hint="@string/optional_phonenumber"
        android:inputType="phone"
        />

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtPhoneNum"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/colTimeTxtView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="bottom"
            android:ems="10"
            android:padding="@dimen/default_Padding"
            android:text="@string/collection_time_hours"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/txtsize"

            />
        <!-- TO DO look into using drawable image to format the SPINNER
         https://stackoverflow.com/questions/16694786/how-to-customize-a-spinner-in-android
        -->
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom"
            android:entries="@array/collectionTimes"
            android:textAlignment="center"/>
    </TableRow>




</RelativeLayout>
